# python-ml-template

./: .env.example  .env.vps.example  Dockerfile  Makefile  README.md  pyproject.toml  setup.sh
.github/workflows/: cicd.yaml
api/: server.py
src/: api.py  exception_handlers.py  main.py  middleware.py
src/app/: api.py  main.py  middleware.py  models.py  rate_limiter.py
src/app/routes/: predict.py
src/common/: logs.py
src/config/: configs.py
src/logger/: logs.py
src/logging/: logger.py
src/model_providers/simple_model_provider/: service.py
src/predictors/simple_predictor/: models.py  service.py
src/routes/: predict.py
src/utils/: paths.py
tests/: test_predict_api.py  test_server.py
